* Curve: small stats on Board Index not properly aligned (forum.css) [Bug 3429]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@8368 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/curve/css/forum.css
+++ b/Themes/curve/css/forum.css
@@ -129,6 +129,17 @@ form#ic_login ul li label
 {
 	display: block;
 }
+/*the small stats*/
+#stats
+{
+    display: block;
+    margin: 0 0 0.5em 0;
+    text-align: right;
+    font-size: 0.9em;
+    position: relative;
+    top: -20px;
+    line-height: 1px;
+}
 /* rounded bars needs a different background here */
 #upshrinkHeaderIC h3.catbg span.left, #upshrinkHeaderIC h3.catbg2 span.left
 {
